cmd/cms-gateway/k8s/02-cms-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-gateway
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cms-gateway
  template:
    metadata:
      labels:
        app: cms-gateway
    spec:
      containers:
        - name: cms-gateway
          image: uhub.service.ucloud.cn/entropypool/cms-gateway:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/CMSGateway
      volumes:
        - name: service-config
          configMap:
            name: cms-gateway-config
            items:
              - key: service-conf
                path: CMSGateway.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cms-gateway
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50810
      targetPort: 50810
    - name: grpc
      port: 50811
      targetPort: 50811
    - name: healthz
      port: 50812
      targetPort: 50812
    - name: prometheus
      port: 50813
      targetPort: 50813
  selector:
    app: cms-gateway
