cmd/cms-gateway/k8s/04-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cms-gateway-traefik-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cms-gateway-traefik
    k8s.kuboard.cn/workload: cms-gateway-traefik
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-cms-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/cms/v1/c
            backend:
              serviceName: cms-gateway
              servicePort: 50810
          - path: /api/cms/v1/m
            backend:
              serviceName: cms-gateway
              servicePort: 50810
    - host: api.procyon.vip
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.procyon.npool.top
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules
    - host: api.hk-cryptomore-production.npool.top
      http: *http_rules
    - host: api.cryptomore.io
      http: *http_rules
    - host: api.mimo.biz
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cms-gateway-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cms-gateway-traefik-app
    k8s.kuboard.cn/workload: cms-gateway-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-oplog@kubernetescrd,
      kube-system-strip-cms-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-langid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/cms/v1/get/contentlist
            backend:
              serviceName: cms-gateway
              servicePort: 50810
          - path: /api/cms/v1/get/categorylist
            backend:
              serviceName: cms-gateway
              servicePort: 50810
    - host: api.procyon.vip
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.procyon.npool.top
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules
    - host: api.hk-cryptomore-production.npool.top
      http: *http_rules
    - host: api.cryptomore.io
      http: *http_rules
    - host: api.mimo.biz
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cms-gateway-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cms-gateway-traefik-app-user
    k8s.kuboard.cn/workload: cms-gateway-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-oplog@kubernetescrd,
      kube-system-strip-cms-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-langid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/cms/v1/create
            backend:
              serviceName: cms-gateway
              servicePort: 50810
          - path: /api/cms/v1/upload
            backend:
              serviceName: cms-gateway
              servicePort: 50810
          - path: /api/cms/v1/update
            backend:
              serviceName: cms-gateway
              servicePort: 50810
          - path: /api/cms/v1/delete
            backend:
              serviceName: cms-gateway
              servicePort: 50810
          - path: /api/cms/v1/get
            backend:
              serviceName: cms-gateway
              servicePort: 50810
    - host: api.procyon.vip
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.procyon.npool.top
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules
    - host: api.hk-cryptomore-production.npool.top
      http: *http_rules
    - host: api.cryptomore.io
      http: *http_rules
    - host: api.mimo.biz
      http: *http_rules
